Wed Aug 26 18:29:14 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/IDL3_to_IDL2/checking_visitor.h:
        * tools/IDL3_to_IDL2/basic_visitor.h:
        * tools/IDL3_to_IDL2/idl3_to_idl2_visitor.cpp:
        * tools/IDL3_to_IDL2/checking_visitor.cpp:
        * tools/IDL3_to_IDL2/idl3_to_idl2_visitor.h:

          Updated visitors to include the new visit methods,
          and commented out the existing methods that use
          port descriptions, which have been eliminated.

Fri Jul 17 19:07:47 UTC 2009  Jeff Parsons  <j.parsons@vanderbilt.edu>

        * tools/IDL3_to_IDL2/basic_visitor.h:
        * tools/IDL3_to_IDL2/basic_visitor.cpp:
        * tools/IDL3_to_IDL2/checking_visitor.h:
        * tools/IDL3_to_IDL2/checking_visitor.cpp:
        
          Added new visit_* methods corresponding to new nodes
          added in the IDL compiler front end.

Wed Jul  8 22:44:15 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/IDL3_to_IDL2/checking_visitor.h:
        * tools/IDL3_to_IDL2/basic_visitor.cpp:
        * tools/IDL3_to_IDL2/basic_visitor.h:
        * tools/IDL3_to_IDL2/checking_visitor.cpp:

          Added new visit_template_interface() and
          visit_porttype() methods to keep these classes up to
          date with the IDL compiler frontend. The methods are
          empty for now, but the IDL3_to_IDL2 visitor classes are
          kept concrete and instantiable.

Fri Jun 19 19:40:21 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/Cornucopia/Cornucopia.mpc:
        * tests/IDL_Test/Keywords/Keywords.mpc:
        * tests/IDL_Test/Reused_Facet_Interface/Basic.mpc:
        * tests/IDL_Test/Reused_Facet_Interface/CodeGen.mpc:

          Added IDL compiler options to generate all export
          header files.

        * tests/IDL_Test/Reused_Facet_Interface/Basic_stub_export.h:
        * tests/IDL_Test/Reused_Facet_Interface/CodeGen_svnt_export.h: